--- a/frontend/src/frontend/assets/css/style.css
+++ b/frontend/src/frontend/assets/css/style.css
@@ -2968,7 +2968,7 @@ html.menu-opened body header:before {
 -----------------------*/
 
 .home-banner {
-	/* background-image: url(../img/banner1.jpg); */
+	background-image: url(../img/banner1.jpg);
 	background-color: rgb(186, 185, 185);
 	background-position: center;
 	background-repeat: no-repeat;
@@ -8149,7 +8149,7 @@ textarea.form-control {
 -----------------------*/
 
 div#global-loader {
-	background: #FFF5F1;
+	background: #e7f2Fe;
 	position: fixed;
 	z-index: 999999;
 	width: 100%;
